# Derivatives-Trading-Engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_matching.cpp
benchmarks/results/: 2026-06-20_baseline.json
bots/include/: simulator.hpp  vpin.hpp
bots/src/: simulator.cpp
bots/tests/: test_simulation.cpp  test_vpin.cpp
clients/: tcp_client.cpp  udp_listener.cpp
engine/include/: matching_engine.hpp  order.hpp  order_book.hpp  perpetual.hpp  price_level.hpp  ring_buffer.hpp
engine/src/: matching_engine.cpp  order_book.cpp  perpetual.cpp
engine/tests/: test_matching.cpp  test_perpetual.cpp  test_ring_buffer.cpp
network/include/: protocol.hpp  tcp_server.hpp  udp_feed.hpp
network/src/: server_main.cpp  tcp_server.cpp  udp_feed.cpp
network/tests/: test_protocol.cpp  test_tcp.cpp
scripts/: fetch_yfinance.py  rl_market_making.ipynb  rl_market_making.py
